--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,8 +4,8 @@ commit = True
 tag = True
 
 [bumpversion:file:pyproject.toml]
-search = version = "{current_version!r}"
-replace = version = "{new_version!r}"
+search = version = {current_version!r}
+replace = version = {new_version!r}
 
 [bumpversion:file:src/depy/__init__.py]
 search = __version__ = '{current_version}'
