changed version from post1 to 0 and will bump to 0.1.1 to reflect full patch

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,11 +1,11 @@
 [bumpversion]
-current_version = 0.1.0.post1
+current_version = 0.1.0
 commit = True
 tag = True
 
 [bumpversion:file:pyproject.toml]
-search = version = {current_version!r}
-replace = version = {new_version!r}
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
 [bumpversion:file:src/depy/__init__.py]
 search = __version__ = '{current_version}'
