--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "summarizedpy"
-version = "0.1.0.post1"
+version = "0.1.0"
 description = "A differential expression analysis package for proteomics data, which leverages transcriptomics tools."
 readme = "README.md"
 authors = [
