--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,46 +1,67 @@
-# This workflow will install Python dependencies, run tests and lint.
-# For more information see: https://docs.github.com/en/actions/use-cases-and-examples/building-and-testing/building-and-testing-python
-
-name: Test Python application
+name: CI
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: [main]
   pull_request:
-    branches: [ "main", "master" ]
-
-permissions:
-  contents: read
+    branches: [main]
 
 jobs:
   build:
-    strategy:
-      matrix:
-        # Test all supported Python versions under Ubuntu
-        os: [ubuntu-latest]
-        python-version: ['3.12', '3.13']
-
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements_dev.txt
-    - name: Lint with ruff
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        ruff check --select=E9,F63,F7,F82
-        # exit-zero treats all errors as warnings
-        ruff check --exit-zero --statistics
-    - name: Install project
-      run: |
-        pip install .
-    - name: Run tests
-      run: |
-        pytest
+      # Step 1: Checkout code
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Step 2: Setup Conda environment
+      - name: Setup Conda
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          python-version: 3.9         # match environment.yml
+          environment-file: environment.yml
+          activate-environment: depy
+          use-mamba: true
+
+      # Step 3: Install the package in editable mode
+      - name: Install DEPy (editable)
+        run: |
+          conda activate depy
+          pip install -e .
+
+      # Step 4: Run tests on editable install
+      - name: Run tests (editable install)
+        run: |
+          conda activate depy
+          pytest -v
+
+      # Step 5: Build wheel and test it
+      - name: Test built wheel
+        run: |
+          conda activate depy
+          pip install build toml
+
+          # Parse version from pyproject.toml
+          VERSION=$(python -c "import toml; print(toml.load('pyproject.toml')['project']['version'])")
+
+          # Build wheel and sdist
+          python -m build
+
+          # Install wheel and run tests
+          pip install dist/summarizedpy-$VERSION-py3-none-any.whl
+          pytest -v
+
+      # Step 6: Build MkDocs site
+      - name: Build MkDocs
+        run: |
+          conda activate depy
+          mkdocs build
+
+      # Step 7: Deploy to GitHub Pages
+      - name: Deploy MkDocs to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+           github_token: ${{ secrets.GITHUB_TOKEN }}
+           publish_dir: ./site
