--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,18 +28,18 @@ jobs:
       # Step 3: Install the package in editable mode
       - name: Install DEPy (editable)
         run: |
-          pip install -e .
+          python -m pip install -e .
 
       # Step 4: Run tests on editable install
       - name: Run tests (editable install)
         run: |
-          pip install pytest
-          pytest -v
+          python -m pip install pytest
+          python -m pytest -v
 
       # Step 5: Build wheel and test it
       - name: Test built wheel
         run: |
-          pip install build toml
+          python -m pip install build toml
 
           # Parse version from pyproject.toml
           VERSION=$(python -c "import toml; print(toml.load('pyproject.toml')['project']['version'])")
@@ -48,8 +48,8 @@ jobs:
           python -m build
 
           # Install wheel and run tests
-          pip install dist/summarizedpy-$VERSION-py3-none-any.whl
-          pytest -v
+          python -m pip install dist/summarizedpy-$VERSION-py3-none-any.whl
+          python -m pytest -v
 
       # Step 6: Build MkDocs site
       - name: Build MkDocs
