--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,17 +39,23 @@ jobs:
       # Step 3: Install the package in editable mode
       - name: Install DEPy (editable)
         run: |
+          source $CONDA/etc/profile.d/conda.sh
+          conda activate depy
           python -m pip install -e .
 
       # Step 4: Run tests on editable install
       - name: Run tests (editable install)
         run: |
+          source $CONDA/etc/profile.d/conda.sh
+          conda activate depy
           python -m pip install pytest
           python -m pytest -v
 
       # Step 5: Build wheel and test it
       - name: Test built wheel
         run: |
+          source $CONDA/etc/profile.d/conda.sh
+          conda activate depy
           python -m pip install build toml
 
           # Parse version from pyproject.toml
@@ -65,6 +71,8 @@ jobs:
       # Step 6: Build MkDocs site
       - name: Build MkDocs
         run: |
+          source $CONDA/etc/profile.d/conda.sh
+          conda activate depy
           mkdocs build
 
       # Step 7: Deploy to GitHub Pages
