--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,4 +6,4 @@ recursive-include tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
-recursive-include docs *.md Makefile *.jpg *.png *.gif
+recursive-include docs *.md Makefile *.jpg *.png *.gif *.svg
