--- a/environment.yml
+++ b/environment.yml
@@ -15,6 +15,7 @@ dependencies:
   - r-optparse
   - r-arrow
   - r-imputelcmd
+  - r-statmod
   - bioconductor-biobase
   - bioconductor-limma
   - bioconductor-vsn
